test/files/pos/bug803.scala
class B(x : () => Int)
class A(i : Int) extends B(() => i) { i }
