test/files/neg/bug58.scala
class A(x: B) extends x.C {}
class B {
  class C {}
}
